--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ."
-  
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.2",
+    "@vercel/node": "^5.5.13",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
