--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^3.15.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "vercel": "^48.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
